# proto-seeder

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: lib.rs  test.rs
examples/backbone_app/: Cargo.toml
examples/backbone_app/src/: lib.rs
src/: constants.rs  main.rs  module.rs  seed_content.rs  view.rs  writer.rs
src/content/: guard.rs  mod.rs  view.rs
src/content/module/: constants.rs  import.rs  init.rs  mod.rs  test_constants.rs
src/content/module/templates/: guard.rs  init.rs  message.rs  mod.rs  model.rs  route.rs  update.rs  view.rs
src/parser/: mod.rs  module.rs  view.rs
src/writer/: checker.rs  guard.rs  manager.rs  mod.rs  module.rs  view.rs
src/writer/module/: checker.rs  manager.rs  mod.rs
