[package]
name = "proto_seeder"
description = "Cli to create files from Routes"
version = "0.0.1"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"

license = "MIT"
#homepage = ""
#documentation = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = { git = "https://github.com/seed-rs/seed.git" }
serde = "1.0.115"
serde_json = "1.0.51"
