[package]
name = "proto_seeder"
description = "Cli to create files from Routes"
version = "0.0.1"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"
license = "MIT"
#homepage = ""
#documentation = ""
readme = "README.md"

exclude=["./examples"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.20"
anyhow = "1.0"
syn = { version =  "1.0.40" ,  features = ["full"]}
convert_case = "^0.4"
proc-macro-error = "^1"
proc-macro2 = "^1"
indicatif = "0.15.0"
indexmap = "1.6.0"