[package]
name = "proto_seeder"
description = "Cli to create files from Routes with seed_routing"
version = "0.0.3"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "seed", "generation","routing"]
categories = ["command-line-utilities"]
homepage = "https://github.com/arn-the-long-beard/proto-seeder"
documentation = "https://github.com/arn-the-long-beard/proto-seeder"
readme = "README.md"
exclude=["examples/*"]
autoexamples = false

[dependencies]
structopt="0.3.20"
anyhow = "1.0"
syn = { version =  "=1.0.40" ,  features = ["full"]}
convert_case = "^0.4"
proc-macro-error = "^1"
proc-macro2 = "^1"
indicatif = "0.15.0"
indexmap = "1.6.0"
